# gui-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  example.env  tables  tables.drawio
.github/workflows/: docker-publish.yml
migrations/2022-02-19-173655_create_users/: up.sql
migrations/2022-02-20-140255_create_states/: down.sql  up.sql
migrations/2022-02-20-140822_create_tasks/: up.sql
migrations/2022-03-26-150825_refreshtokens/: down.sql  up.sql
src/: config.rs  dto.rs  error.rs  extractor.rs  handler.rs  lib.rs  model.rs  schema.rs  service.rs  sql.rs  util.rs
src/config/: db.rs
src/config/db/: postgres.rs
src/dto/: auth.rs  state.rs  task.rs
src/handler/: auth.rs  health.rs  state.rs  task.rs
src/model/: auth.rs  health.rs  state.rs  task.rs
src/service/: auth.rs  health.rs  state.rs  task.rs
src/sql/: auth.rs  health.rs  state.rs  task.rs
src/util/: encryption.rs  epoch.rs  jwt.rs
