[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0"
axum = { version = "0.4", features = ["headers"] }
clap = { version = "3.1", features = ["derive", "env"] }
dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "r2d2", "time", "uuidv07"] }
headers = "0.3"
lazy_static = "1.4"
r2d2 = "0.8"
rand = "0.8"
rayon = "1.5"
jsonwebtoken = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde-well-known", "serde-human-readable"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde"] }
validator = { version = "0.14", features = ["derive"] }
