[package]
name = "gui-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
rust-argon2 = "1.0"
axum = { version = "0.5", features = ["headers"] }
clap = { version = "3", features = ["derive", "env"] }
dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "r2d2", "time", "uuidv07"] }
headers = "0.3"
lazy_static = "1.4"
r2d2 = "0.8"
rand = "0.8"
rayon = "1"
jsonwebtoken = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4"
tower-http = { version = "0.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde"] }
validator = { version = "0.15", features = ["derive"] }
